# SearchingLoop

./: .gitignore  pyproject.toml
cycle_by_list/: cycle_by_list.py  trn.py
tests/: __init__.py  test_cycle_by_list.py
